--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -6,6 +6,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+  cursor: none;
 }
 
 .score {
@@ -16,6 +17,18 @@
   color: #e4e4e4;
   font-weight: bold;
   font-size: 70px;
+  font-family: monospace;
+  z-index: -1;
+}
+
+.countdown {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #e4e4e4;
+  font-weight: bold;
+  font-size: 40px;
   font-family: monospace;
   z-index: -1;
 }
