--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -14,7 +14,7 @@
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #e4e4e4;
+  color: #ccc;
   font-weight: bold;
   font-size: 70px;
   font-family: monospace;
@@ -26,7 +26,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #e4e4e4;
+  color: #ccc;
   font-weight: bold;
   font-size: 40px;
   font-family: monospace;
