--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -11,7 +11,7 @@
 
 .score {
   position: absolute;
-  top: 40%;
+  top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: #ccc;
@@ -23,7 +23,7 @@
 
 .countdown {
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: #ccc;
@@ -31,4 +31,32 @@
   font-size: 40px;
   font-family: monospace;
   z-index: -1;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffffa0;
+  z-index: 5;
+}
+
+.win, .lost {
+  position: absolute;
+  text-align: center;
+  white-space: nowrap;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #12ad12;
+  font-weight: bold;
+  font-size: 140px;
+  font-family: monospace;
+  z-index: 10;
+}
+
+.lost {
+  color: rgb(231, 33, 33);
 }
